--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     justify-content: center;
     min-width: 100vh;
     position: relative;
+    background-color: #999;
 }
 .container{
     margin: -300px auto;
@@ -60,10 +61,10 @@ img{
 
 
 tr:nth-child(2n){
-    background-color: #f6f8f8;
+    background-color: #6ca8a8;
 }
 tr:nth-child(2n) td {
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid #97e7b1;
     border-top: 1px solid #e0e0e0
 }
 
