--- a/style.css
+++ b/style.css
@@ -7,6 +7,23 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+nav {
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    margin-bottom: 750px;
+    width: 580%;
+   
+}
+/* Style pour les liens de la navbar */
+nav a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
+}
 
 body{
     display:flex;
@@ -15,6 +32,7 @@ body{
     min-width: 100vh;
     position: relative;
     background-color: #999;
+    
 }
 .container{
     margin: -300px auto;
@@ -32,7 +50,7 @@ body{
     text-decoration: none;
 }
 .Btn_add img{
-    margin-right: 5px;
+    margin-right: 15px;
     height: 20px;
     color: #fff;
 }
@@ -41,6 +59,8 @@ body{
 table{
     border-color: collapse;
     color: #484848;
+    margin-bottom: 70px;
+ 
 }
 th{
     font-size: 16px;
@@ -130,3 +150,16 @@ input[type="submit"]{
     text-transform: uppercase;
 
 }
+footer {
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    position:fixed;
+    bottom: 0;
+    width: 100%;
+    overflow: hidden;
+}
+
